# alpamayo-r1-distilled

./: .gitignore  README.md  pyproject.toml
data_splits/: test.parquet  train.parquet  val.parquet
data_splits/clip_ids/: test_clip_ids.parquet  train_clip_ids.parquet  val_clip_ids.parquet
docs/: ARCHITECTURE.md  TRAINING.md
scripts/: extract_frames.py  generate_ego_history.py  generate_teacher_labels.py  merge_shards.py
src/distillation/: __init__.py  calibration.py  cli.py  export.py  losses.py  train.py
src/distillation/benchmarks/: __init__.py  output_adapters.py
src/distillation/datasets/: __init__.py  argoverse2_dataset.py  base.py  nuscenes_dataset.py  physicalai.py
src/distillation/encoders/: __init__.py  base.py  camera_encoder.py  raster_encoder.py  vector_encoder.py
src/distillation/models/: __init__.py  baseline_student.py  config.py  decoder.py  encoder.py  multimodal_decoder.py  reasoning_student.py  unicycle.py
src/distillation/training/: __init__.py  checkpoint.py  ema.py  loops.py  schedules.py  state.py  validation.py
