[project]
name = "alpamayo-r1-distilled"
version = "0.1.0"
description = "Distilling Alpamayo-R1's reasoning capabilities into small student models"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "huggingface-hub>=0.36.0",
    "pandas>=2.2.3",
    "pyarrow>=20.0.0",
    "numpy>=2.0.0",
    "tqdm>=4.65.0",
    "opencv-python>=4.11.0.86",
    "av>=16.0.1",
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "sentence-transformers>=3.0.0",
    "scipy>=1.10.0",
    "imageio>=2.30.0",
    "pillow>=10.0.0",
    "matplotlib>=3.10.8",
    "einops>=0.8.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.0",
    "ruff>=0.4.0",
]
# Benchmark dependencies - install manually due to version conflicts:
# nuScenes: pip install nuscenes-devkit pyquaternion (requires numpy<2.0)
# Argoverse 2: pip install av2

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/distillation"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
